--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Test",
-	"short_name": "Test",
+	"name": "TestVK",
+	"short_name": "TestVK",
 	"description": "test",
 	"start_url": "index.html",
 	"display": "fullscreen",
